--- a/bts-react/src/index.css
+++ b/bts-react/src/index.css
@@ -24,7 +24,10 @@ code {
 .container {
   width: 50%;
   margin: auto;
-  margin-top: 3rem;
+}
+.my-3 {
+  margin-bottom: 2rem;
+  margin-top: 2rem;
 }
 .formGroup {
   margin-bottom: 1rem;
@@ -33,9 +36,23 @@ code {
 .img {
   border-radius: 10px;
 }
+.detail-img {
+  width: 30%;
+}
+.pre-box {
+  font-size: 1rem;
+  line-height: 2rem;
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -o-pre-wrap;
+  word-wrap: break-all;
+}
 
 @media only screen and (max-width: 1000px) {
   .container {
+    width: 95%;
+  }
+  .detail-img {
     width: 95%;
   }
 }
