--- a/bts-react/src/index.css
+++ b/bts-react/src/index.css
@@ -47,11 +47,29 @@ code {
   white-space: -o-pre-wrap;
   word-wrap: break-all;
 }
+.content-box{
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: wrap;
+  height: 10rem;
+}
+.comment-textarea {
+  width: 100%;
+  resize: none;
+  font-size: 1rem;
+}
+
+.date {
+  float: right;
+}
 @media only screen and (max-width: 1000px) {
   .container {
     width: 95%;
   }
   .detail-img {
     width: 95%;
+  }
+  .date {
+    float: left;
   }
 }
