--- a/bts-react/src/index.css
+++ b/bts-react/src/index.css
@@ -21,13 +21,9 @@ code {
   cursor: pointer;
 }
 
-.container {
+.container-50 {
   width: 50%;
   margin: auto;
-}
-.my-3 {
-  margin-bottom: 2rem;
-  margin-top: 2rem;
 }
 .formGroup {
   margin-bottom: 1rem;
@@ -63,7 +59,7 @@ code {
   float: right;
 }
 @media only screen and (max-width: 1000px) {
-  .container {
+  .container-50 {
     width: 95%;
   }
   .detail-img {
