포스트 댓글 ui 수정 및 회원 dialog, 탈퇴처리 완료

--- a/bts-react/src/index.css
+++ b/bts-react/src/index.css
@@ -21,8 +21,12 @@ code {
   cursor: pointer;
 }
 
-.container-50 {
-  width: 50%;
+.container-70 {
+  width: 70%;
+  margin: auto;
+}
+.container-80 {
+  width: 80%;
   margin: auto;
 }
 .formGroup {
